# qdrant

./: .all-contributorsrc  .codespellrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .rusty-hook.toml  AUTO_TO_CUSTOM_SHARDING_MIGRATION_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ui-auth  Dockerfile.unprivileged  DockerfileGpu  DockerfileGpuAmd  DockerfileGpuNvidia  IMPLEMENTATION_SUMMARY.md  METRICS_UPDATE.patch  Makefile  OPTIMIZATION3_PLAN.md  PER_COLLECTION_METRICS_README.md  PLAN.md  QUICK_START.md  QUICK_START_GRPC.md  README.md  apply_metrics_changes.py  broken-storage.md  bug.md  build.rs  check.sh  clippy.toml  code.patch  compose-dev.yaml  coverage.sh  docker-compose-gen.sh  docker-compose.yml  expanded.rs  (+18 more)
benches/mmap-advice/: Cargo.toml  mmap-advice.sh
benches/search-points/: Cargo.toml  search-points.sh
examples/scorer-playground/: Cargo.toml  experiments.ipynb
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_text_index.rs
lib/api/: Cargo.toml  build.rs  grpc_macros.rs
lib/blob_store/: Cargo.toml  readme.md
lib/collection/: Cargo.toml  README.md
lib/common/: Cargo.toml  lib.rs
lib/edge/: Cargo.toml  Justfile  README.md
lib/gpu/: Cargo.toml  nvidia_icd.json
lib/gridstore/: Cargo.toml  output-old.txt  output-selection.txt  output.txt  readme.md
lib/posting_list/: Cargo.toml
lib/quantization/: Cargo.toml  build.rs
lib/segment/: Cargo.toml  a.out  build.rs
lib/shard/: Cargo.toml
lib/sparse/: Cargo.toml
lib/storage/: Cargo.toml
lib/tools/: Cargo.toml
lib/trififo/: Cargo.toml
lib/uio-client/: Cargo.toml  build.rs
lib/uio-grpc-client/: Cargo.toml  build.rs
lib/wal/: .gitignore  Cargo.toml  README.md
python_bindings/: Cargo.toml  README.md  app.py  pyproject.toml
python_bindings/src/: lib.rs
tests/: .gitignore  basic_api_test.sh  basic_grpc_inference_test.sh  basic_grpc_test.sh  basic_internal_grpc_test.sh  basic_multivector_grpc_test.sh  basic_query_grpc_test.sh  basic_sparse_grpc_test.sh  basic_sparse_test.sh  grpc_consistency_check.sh  grpc_metrics_test.rs  integration-tests-api-key.sh  integration-tests.sh  openapi_consistency_check.sh  openapi_integration_test.sh  per_collection_metrics_test.rs  per_collection_metrics_test.sh  pyproject.toml  readonly_filesystem_test.sh  removes_test.sh  shard-snapshot-api.sh  validate-openapi.sh
tests/api_key/: .gitignore  Dockerfile  grpc_ro.sh  grpc_rw.sh  requirements-freeze.txt  rest_ro.sh  rest_rw.sh  test_grpc.py  test_rest.py
tests/cli/: help.toml
tests/consensus_tests/: assertions.py  check_points.py  create_collection_and_check.py  custom_sharding.py  docker-compose.yaml  downscale_cluster.py  fixtures.py  insert_points.py  multipeer_test.py  requirements-freeze.txt  requirements.in  requirements.txt  run_tests.sh  test_cluster_metadata.py  test_cluster_operation_coalescing.py  test_cluster_rejoin.py  test_collection_created_after.py  test_collection_created_before.py  test_collection_creation_after_dropping.py  test_collection_recovery.py  test_collection_recovery_limits.py  test_collection_shard_transfer.py  test_collection_shard_update.py  test_collection_sharding.py  test_collection_update_not_blocked_by_busy_worker.py  test_consensus_compaction.py  test_consensus_restart_on_transient_error.py  test_consistency_after_kill.py  test_consistency_after_replication.py  test_consistency_after_scaling.py  test_custom_sharding.py  test_custom_sharding_group_by_with_lookup.py  test_dirty_shard_crash_loop.py  test_disable_url_snapshot_recovery.py  test_dummy_shard.py  test_failed_snapshot_recovery.py  test_filter_update_ops_replicated.py  test_force_delete_peer.py  test_http2_keep_alive.sh  test_hw_measurement.py  (+77 more)
tests/e2e_tests/: .test_durations  README.md  __init__.py  client_utils.py  conftest.py  examples.py  models.py  test_bugs.py  test_continuous_snapshots.py  test_data_compatibility.py  test_immutable_index.py  test_low_disk.py  test_low_ram.py  test_many_collections.py  test_search_during_indexing.py  test_snapshots_recovery.py  test_storage_compatibility.py  test_strict_mode_disk.py  test_strict_mode_memory.py  test_tls.py  utils.py
tests/load-time/: Dockerfile  docker-compose-iops.yaml  docker-compose-simple.yaml  generate_graph.py  load_time_calculation.py  run_test.sh
tests/low-disk/: create_and_search_items.py  create_items.py  low-disk.sh
tests/low-ram/: low-ram.sh
tests/manual/: slow_snapshot_download.py  test_memory_reporting.py
tests/openapi/: conftest.py  requirements-freeze.txt  requirements.txt  run_docker.sh  test_alias.py  test_basic_retrieve_api.py  test_basic_retrieve_multivec_api.py  test_batch_update.py  test_batch_update_multivec.py  test_bm25.py  test_cluster.py  test_collection_exists.py  test_collection_metadata.py  test_collection_update.py  test_collection_update_multivec.py  test_conditional_update.py  test_count.py  test_db_lock.py  test_deferred_points.py  test_delete_points.py  test_dims_explained.py  test_discover.py  test_discovery.py  test_distance_matrix.py  test_euclid_dist.py  test_facets.py  test_filter.py  test_filter_has_vector.py  test_filter_is_empty.py  test_filter_min_should.py  test_filter_slice.py  test_filter_values_count.py  test_filter_values_count_missing_field.py  test_filtered_delete.py  test_fts.py  test_geo_filter.py  test_geo_payload_index.py  test_group.py  test_index_deferred_points.py  test_indexing_progress.py  (+59 more)
tests/python_tests/: .gitignore  conftest.py  multipeer_test.py
tests/resource_tests/: README.md  client_utils.py  conftest.py  examples.py  test_cluster_example.py  test_compose_example.py  test_container_example.py  test_low_disk.py  test_low_ram.py  test_snapshots_recovery.py  test_storage_compatibility.py  test_tls.py  utils.py
tests/snapshots/: snapshots-recovery.sh
tests/storage/: raft_state.json
tests/storage-compat/: README.md  gen_storage_compat_data.sh  populate_db.py  storage-compatibility.sh  storage.tar.bz2
tests/streaming_transfer_benchmark/: batch_size_sweep.sh  benchmark.py  cloud_benchmark.py  (+3 more)
(+3537 files in other folders)
