[package]
name = "qdrant-segment-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "qdrant_segment_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
segment = {path = "../lib/segment"}
numpy = "0.13"
