[package]
name = "qdrant-segment-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "qdrant_segment_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
serde_json = "~1.0"
numpy = "0.13"
segment = {path = "../lib/segment"}
