[tool.poetry]
name = "qdrant-test-deps"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

grpc-interceptor = "^0.15"
grpc-requests = "^0.1"
more-itertools = "^10.7"
pyjwt = "^2.10"
jsons = "^1.6.3"
pytest = "^8.3"
pytest-timeout = "^2.3"
pytest-cases = "^3.8.6"
requests = "^2.32"
schemathesis = "^3.39.16"
retry = "^0.9.2"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
