[tool.poetry]
name = "qdrant-test-deps"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

grpc-interceptor = "^0.15"
grpc-requests = "^0.1"
more-itertools = "^10.7"
pyjwt = "^2.10"
jsons = "^1.6.3"
pytest = "^8.4"
pytest-timeout = "^2.4"
pytest-cases = "^3.9.1"
requests = "^2.32.4"
schemathesis = "^3.39.16"
retry = "^0.9.2"
docker = "^7.1.0"
pytest-xdist = "^3.8.0"
qdrant-client = "^1.15.1"
tqdm = "^4.67.1"

[tool.pytest.ini_options]
markers = [
    "longrunning: marks tests as long-running (deselect with '-m \"not longrunning\"')",
    "xdist_group: group tests to run on the same worker (for pytest-xdist)",
]
addopts = """
    --dist=loadgroup
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
