[package]
name = "search-points"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
qdrant-client = { version = "0.11", default-features = false }
rand = "0.8"
tokio = { workspace = true }

[dependencies.criterion]
version = "0.3"
features = ["async", "async_tokio", "cargo_bench_support", "html_reports"]
