[package]
name = "api"
version = "1.8.1"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[features]
tracing = ["dep:tracing", "segment/tracing"]

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rand = "0.8.5"
chrono = { version = "~0.4", features = ["serde"] }
thiserror = "1.0"
parking_lot = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
log = "0.4"

common = { path = "../common/common" }
segment = { path = "../segment" }
sparse = { path = "../sparse" }

tracing = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
prost-build = { version = "0.11.8", features = ["cleanup-markdown"] }
common = { path = "../common/common" }

[dev-dependencies]
tokio = { workspace = true }
