[package]
name = "api"
version = "1.12.5"
authors = [
    "Andrey Vasnetsov <andrey@vasnetsov.com>",
    "Qdrant Team <info@qdrant.tech>",
]
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[features]
tracing = ["dep:tracing", "segment/tracing"]

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
validator = { workspace = true }
itertools = { workspace = true }

common = { path = "../common/common" }
segment = { path = "../segment" }
sparse = { path = "../sparse" }

tracing = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
common = { path = "../common/common" }

[dev-dependencies]
tokio = { workspace = true }
